# stitcher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  blending.c  blending.h  build.sh  edJpeg.c  edJpeg.cpp  edJpeg.h  image_operations.c  image_operations.h  jpeg.c  jpeg.h  laplaceBlending.c  laplaceBlending.cpp  laplaceBlending.h  laplace_blending.c  laplace_blending.h  stitch  stitch.c  stitch.cpp  utils.c  utils.h
.github/workflows/: main.yml
examples/: a.cpp  downsampled  downsampling.c  stitch.c
examples/downsampled.dSYM/Contents/: Info.plist
examples/downsampled.dSYM/Contents/Resources/DWARF/: downsampled
tests/: test.c
